--- a/menu.htm
+++ b/menu.htm
@@ -1,12 +1,32 @@
 <P>
 <ul>
-	<li><a href="index.php">jbs Home</a></li>
-  <li><a href="?article=download">Download jbs</a></li>
+	<li><a href="index.php">Home</a></li>
+  <li><a href="?article=download">Download</a></li>
+  <li><a href="?article=revhistory">Rev History</a></li>
   <li><a href="tags.php">Tags</a></li>
   <li><a href="rss.php">RSS</a></li>
 </ul>
 <br>
 
 <ul>
-  <li><a href="http://jrobb.org/blog"> my blog</a></li>
+  <li><a href="http://jrobb.org/"> jrobb.org</a></li>
 </ul>
+
+
+<!--Google Ad stuff-->
+<br>
+<center>
+<hr>
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-2775682770358114";
+/* vertical banner */
+google_ad_slot = "7941586606";
+google_ad_width = 120;
+google_ad_height = 240;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+<hr>
+</center>
