changed $adstuff to $postFooter

--- a/menu.htm
+++ b/menu.htm
@@ -12,11 +12,16 @@
   <li><a href="http://jrobb.org/"> jrobb.org</a></li>
 </ul>
 
-
-<!--Google Ad stuff-->
-<br>
 <center>
 <hr>
+<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Q7A422A9N8JTS"><img src="https://www.paypal.com/en_US/i/btn/btn_donate_LG.gif" border=0 title="help support the site and/or fix my jeep!" /></a>
+</center>
+
+<!--Google Ad stuff-->
+
+<center>
+<hr>
+<br>
 <script type="text/javascript"><!--
 google_ad_client = "ca-pub-2775682770358114";
 /* vertical banner */
