just changed a menu

--- a/menu.htm
+++ b/menu.htm
@@ -18,11 +18,12 @@
 </center>
 
 <!--Google Ad stuff-->
-
 <center>
 <hr>
 <br>
-<script type="text/javascript"><!--
+<noscript>an ad would go here</noscript>
+<script type="text/javascript">
+<!--
 google_ad_client = "ca-pub-2775682770358114";
 /* vertical banner */
 google_ad_slot = "7941586606";
@@ -35,3 +36,4 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 <hr>
 </center>
+<!--/Google Ad stuff-->
