--- a/menu.htm
+++ b/menu.htm
@@ -14,26 +14,29 @@
 
 <center>
 <hr>
-<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Q7A422A9N8JTS"><img src="https://www.paypal.com/en_US/i/btn/btn_donate_LG.gif" border=0 title="help support the site and/or fix my jeep!" /></a>
+<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Q7A422A9N8JTS"><img vspace=3 src="https://www.paypal.com/en_US/i/btn/btn_donate_LG.gif" border=0 title="help support the site and/or fix my jeep!" /></a>
+<br><a href="http://creativecommons.org/licenses/by-sa/3.0/us/"><img vspace=3 src="http://i.creativecommons.org/l/by-sa/3.0/us/88x31.png" title="CC by-sa 3.0" border=0></a>
+<br><a href="http://www.factorq.net"><img vspace=3 src ="http://factorq.net/images/button.JPG" title="factorq.net" border=0></a>
 </center>
 
-<!--Google Ad stuff-->
+
 <center>
 <hr>
 <br>
 <noscript>an ad would go here</noscript>
-<script type="text/javascript">
-<!--
+<!--Google Ad stuff-->
+<script type="text/javascript"><!--
 google_ad_client = "ca-pub-2775682770358114";
-/* vertical banner */
-google_ad_slot = "7941586606";
+/* skyscraper-gray-txt */
+google_ad_slot = "6214184730";
 google_ad_width = 120;
-google_ad_height = 240;
+google_ad_height = 600;
 //-->
 </script>
 <script type="text/javascript"
 src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
+<!--/Google Ad stuff-->
 <hr>
 </center>
-<!--/Google Ad stuff-->
+
