nothing to see here

--- a/menu.htm
+++ b/menu.htm
@@ -27,9 +27,9 @@
 <!--Google Ad stuff-->
 <script type="text/javascript"><!--
 google_ad_client = "ca-pub-2775682770358114";
-/* skyscraper-gray-txt */
-google_ad_slot = "6214184730";
-google_ad_width = 120;
+/* w-skyscraper-txt-gray */
+google_ad_slot = "6857918376";
+google_ad_width = 160;
 google_ad_height = 600;
 //-->
 </script>
