added identishare script to the menu

--- a/menu.htm
+++ b/menu.htm
@@ -18,6 +18,12 @@
 <br><a href="http://www.factorq.net"><img vspace=1 src ="http://factorq.net/images/button.JPG" title="factorq.net" border=0></a>
 <br><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Q7A422A9N8JTS"><img vspace=1 src="https://www.paypal.com/en_US/i/btn/btn_donate_LG.gif" border=0 title="help support the site and/or fix my jeep!" /></a>
 <br><a href="http://flattr.com/thing/120629/jambas-blog-script" target="_blank"><img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a>
+
+<hr>
+
+<div id="identishare" style="vertical-align: bottom;"></div>
+<script type="text/javascript" src="identishare/identishare.php" defer="defer"></script> 
+
 </center>
 
 
