added links to github issue tracker and wiki to menu

--- a/menu.htm
+++ b/menu.htm
@@ -1,12 +1,19 @@
 <P>
 <ul>
 	<li><a href="index.php">Home</a></li>
-  <li><a href="?article=download">Download</a></li>
-  <li><a href="?article=revhistory">Rev History</a></li>
-  <li><a href="tags.php">Tags</a></li>
-  <li><a href="rss.php">RSS</a></li>
+	<li><a href="?article=download">Download</a></li>
+	<li><a href="?article=revhistory">Rev History</a></li>
+	<li><a href="tags.php">Tags</a></li>
+	<li><a href="rss.php">RSS</a></li>
 </ul>
 <br>
+
+<ul>
+	<li><a href="https://github.com/jfrobbins/jbs/issues">Issue Tracker</a></li>
+	<li><a href="https://github.com/jfrobbins/jbs/wiki">Wiki</a></li>
+</ul>
+<br>
+
 
 <ul>
   <li><a href="http://jrobb.org/"> jrobb.org</a></li>
