--- a/menu.htm
+++ b/menu.htm
@@ -21,10 +21,10 @@
 
 <center>
 <hr>
-<a href="http://creativecommons.org/licenses/by-sa/3.0/us/"><img vspace=1 src="http://i.creativecommons.org/l/by-sa/3.0/us/88x31.png" title="CC by-sa 3.0" border=0></a>
-<br><a href="http://www.factorq.net"><img vspace=1 src ="http://factorq.net/images/button.JPG" title="factorq.net" border=0></a>
-<br><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Q7A422A9N8JTS"><img vspace=1 src="https://www.paypal.com/en_US/i/btn/btn_donate_LG.gif" border=0 title="help support the site and/or fix my jeep!" /></a>
-<br><a href="http://flattr.com/thing/120629/jambas-blog-script" target="_blank"><img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a>
+<a href="http://creativecommons.org/licenses/by-sa/3.0/us/"><img vspace=1 src="http://i.creativecommons.org/l/by-sa/3.0/us/88x31.png" title="CC by-sa 3.0" alt="CC by-sa 3.0" border=0></a>
+<br><a href="http://www.factorq.net"><img vspace=1 src ="http://factorq.net/images/button.JPG" title="factorq.net" alt="factorQ" border=0></a>
+<br><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=Q7A422A9N8JTS"><img vspace=1 src="https://www.paypal.com/en_US/i/btn/btn_donate_LG.gif" border=0 title="help support the site and/or fix my jeep!" alt="paypal"></a>
+<br><a href="http://flattr.com/thing/120629/jambas-blog-script" target="_blank"><img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0"></a>
 
 <hr>
 
