--- a/menu.htm
+++ b/menu.htm
@@ -27,9 +27,13 @@
 <br><a href="http://flattr.com/thing/120629/jambas-blog-script" target="_blank"><img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0"></a>
 
 <hr>
-
+<! -- identishare -->
 <div id="identishare" style="vertical-align: bottom;"></div>
 <script type="text/javascript" src="identishare/identishare.php" defer="defer"></script> 
+<P></P>
+
+<! -- twitter -->
+<a href="http://twitter.com/share" class="twitter-share-button" data-count="vertical" data-via="jambalayajon">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 
 </center>
 
